--- a/Personal-Portfolio/main_pp.css
+++ b/Personal-Portfolio/main_pp.css
@@ -9,6 +9,8 @@ html, body {
     background-color: brown;
     padding: 0px;
     margin: 0px;
+    position: fixed;
+    width: 100%;
     
 }
 #navbar ul{
